--- a/skill-management/src/main/resources/application.yml
+++ b/skill-management/src/main/resources/application.yml
@@ -1,18 +1,12 @@
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/skill_management
+  r2dbc:
+    url: r2dbc:postgresql://localhost:5432/skill_management
     username: postgres
     password: Telnet*1234
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        format_sql: true
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+  sql:
+    init:
+      mode: always
 
 application:
   security:
