--- a/skill-management/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/skill-management/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/v1.0/initial-schema.yaml
+  - include:
+      file: db/changelog/v1.0/insert-admin-user.yaml
