feat: ajout des nouvelles classes de gestion des exceptions et modèles

--- a/skill-management/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/skill-management/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,7 @@ databaseChangeLog:
       file: db/changelog/v1.0/initial-schema.yaml
   - include:
       file: db/changelog/v1.0/insert-admin-user.yaml
+  - include:
+      file: db/changelog/v1.0/employee-table.yaml
+  - include:
+      file: db/changelog/v1.0/skill-tables.yaml
